--- a/package.json
+++ b/package.json
@@ -71,5 +71,6 @@
     "umi-presets-pro": "^2.0.3",
     "umi-serve": "^1.9.11"
   },
-  "engines": { "node": ">=20.0.0" }
+  "engines": { "node": ">=20.0.0" },
+  "homepage": "https://kyoto0826.github.io/crm-simple/"
 }
